# autoantibody

./: .gitignore  CLAUDE.md  README.md  WORKPLAN.md  install.sh  pyproject.toml
.github/workflows/: ci.yaml  python-publish.yaml
configs/: cr9114_benchmark.yaml  example_campaign.yaml
containers/: Makefile
containers/ablms/: Dockerfile
containers/base/: Dockerfile.cpu  Dockerfile.gpu
containers/evoef/: Dockerfile
containers/flex_ddg/: Dockerfile
containers/graphinity/: Dockerfile
containers/proteinmpnn_stability/: Dockerfile
containers/stabddg/: Dockerfile
docs/: affinity_autonomy_architecture.md  streamlined_architecture.md
programs/: cr9114_benchmark.md  program.md
scripts/: benchmark_skempi.py  evaluate_cr9114.py  init_campaign.py  prepare_cr9114.py
src/autoantibody/: __init__.py  __main__.py  container.py  models.py  run_tool.py  scorers.py  state.py  structure.py
tests/: conftest.py  test_ablms_score.py  test_atom_ddg.py  test_container.py  test_container_integration.py  test_evoef_ddg.py  test_graphinity_score.py  test_lookup_oracle.py  test_models.py  test_placeholder.py  test_scorers.py  test_stabddg_score.py  test_stability_check.py  test_state.py  test_structure.py  test_tools.py
tools/: _common.py  ablms_score.py  atom_ddg.py  baddg_score.py  evoef_ddg.py  flex_ddg.py  graphinity_score.py  lookup_oracle.py  stabddg_score.py  stability_check.py
