[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoantibody"
version = "0.0.1"
description = "Autoantibody analysis tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Bryan Briney", email = "briney@scripps.edu" },
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "biopython>=1.80",
    "numpy>=1.24",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.urls]
Repository = "https://github.com/briney/autoantibody"

# --- Tool Configuration ---

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.per-file-ignores]
# Pydantic models need runtime access to types like datetime and Path
"src/autoantibody/models.py" = ["TCH003"]

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["src/autoantibody"]
